--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <!-- base colors-->
-    <color name="colorPrimary">#ff1976d2</color>
-    <color name="colorPrimaryDark">#ff1565c0</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ffdd2c00</color>
     <color name="list_header">#777</color>
     <color name="warning">@android:color/holo_red_light</color>
