--- a/res/layout/tab_logs.xml
+++ b/res/layout/tab_logs.xml
@@ -13,7 +13,8 @@
             android:id="@+id/txtLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:textIsSelectable="true" />
     </HorizontalScrollView>
 
 </ScrollView>
