new options to share module link

--- a/app/src/main/res/menu/menu_download_details.xml
+++ b/app/src/main/res/menu/menu_download_details.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/menu_share"
+        android:icon="@drawable/ic_action_share"
+        android:title="@string/menuReload"
+        app:showAsAction="ifRoom|withText"/>
 
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_menu_refresh"
-        android:showAsAction="always|withText"
-        android:title="@string/menuReload"/>
+        android:title="@string/menuReload"
+        app:showAsAction="ifRoom|withText"/>
 
 </menu>
