--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <resources>
 
     <!-- base colors-->
-    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimary">#67baa0</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ffdd2c00</color>
+    <color name="colorPrimaryLight">#3f51b5</color>
+    <color name="colorAccent">#63c26e</color>
     <color name="list_header">#777</color>
     <color name="warning">@android:color/holo_red_light</color>
     <color name="warning_box">@android:color/holo_red_dark</color>
