--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -8,4 +8,24 @@
         android:title="@string/help"
         app:showAsAction="always|withText"/>
 
+    <item
+        android:id="@+id/installation_mode"
+        android:icon="@drawable/ic_settings_white_24dp"
+        android:title="@string/settings_install_mode"
+        app:showAsAction="ifRoom|withText"/>
+
+    <group>
+
+        <item
+            android:id="@+id/reboot"
+            android:icon="@drawable/ic_menu_refresh"
+            android:title="@string/reboot"/>
+
+        <item
+            android:id="@+id/soft_reboot"
+            android:icon="@drawable/ic_menu_refresh"
+            android:title="@string/soft_reboot"/>
+
+    </group>
+
 </menu>
