--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -85,4 +85,11 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="iconsDrawables" translatable="false">
+        <item>ic_launcher</item>
+        <item>ic_launcher_hjmodi</item>
+        <item>ic_launcher_rovo</item>
+        <item>ic_launcher_rovo_old</item>
+    </string-array>
+
 </resources>
