--- a/app/src/main/res/layout/list_item_module.xml
+++ b/app/src/main/res/layout/list_item_module.xml
@@ -85,7 +85,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:focusable="false"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:padding="3dp"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
